--- a/Checkout.html
+++ b/Checkout.html
@@ -216,7 +216,7 @@ span.price {
 
   <div class="col-75">
     <div class="container">
-      <form action="Home.html">
+      <form action="home.html">
       
         <div class="row">
           <div class="col-50">
